--- a/vk_config.v2.json
+++ b/vk_config.v2.json
@@ -61,7 +61,7 @@
         },
         "rfc2109": false,
         "secure": true,
-        "value": "9c725c8fcb4366443c29cf9f168fa0c822b1883f59a8c4b080223",
+        "value": "37581dbeb11302378592d5ca789137b4c03a79139578eaeef19c3",
         "version": 0
       },
       {
@@ -120,7 +120,7 @@
         "rest": {},
         "rfc2109": false,
         "secure": true,
-        "value": "2fc58b8686fbcba4aa5f6faba60b81c1471f05e0420080e88b8d3",
+        "value": "aa74bef70f9fb3755095b50067add095d71b40929934da9502277",
         "version": 0
       },
       {
@@ -139,7 +139,7 @@
         "rest": {},
         "rfc2109": false,
         "secure": false,
-        "value": "1697502980_755b174a9c6427e10e",
+        "value": "0_a4ebb2ebb6b918adc5",
         "version": 0
       },
       {
@@ -160,7 +160,7 @@
         },
         "rfc2109": false,
         "secure": true,
-        "value": "Y2I0ZGZiOGIyZTI0ODY3MDhkOWI2ZTE0",
+        "value": "ZDhlM2MzZmQxYjA4ZGU2Y2I4YjNlZjJl",
         "version": 0
       }
     ],
